# ssmerge46

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
src/cv2wrap/: __init__.py  color.py  image.py
src/geometry/: __init__.py  rect.py  vector.py
src/recogn/: matching.py  template.py
src/serialize/: __init__.py
src/ssmerge46/: __init__.py  config.py  exception.py  imgproc.py  umamerge.py  web.py
src/ssmerge46/cogs/: command_error.py  ssm.py
