[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ssmerge46"
version = "0.2.8"
description = "A discod bot that merges screenshots taken in 'Umamusume Pretty Derby'"
authors = ["susu8989"]
readme = "README.md"
packages = [{include = "ssmerge46", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10.0"

"discord.py" = "^2.2.3"
mashumaro = "^3.7"
numpy = "^1.24.3"
opencv-log = "^1.4.0"
opencv-python = "^4.7.0"
pyyaml = "^6.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pydocstring = "^0.2.1"
pydocstyle= "^6.3.0"
pyproject-flake8 = "^6.0.0"
pytest = "^7.3.1"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
line_length = 100
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = true
