[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ssmerge46"
version = "0.2.9"
description = "A discod bot that merges screenshots taken in 'Umamusume Pretty Derby'"
authors = ["susu8989"]
readme = "README.md"
packages = [{ include = "ssmerge46", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10.0"

"discord.py" = "^2.2.3"
flask = "^3.0.0"
mashumaro = "^3.7"
numpy = "^1.25.2"
opencv-log = "^1.4.0"
opencv-python = "^4.7.0"
pyyaml = "^6.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pydocstring = "*"
pydocstyle = "*"
pylint = "*"
pyproject-flake8 = "*"
pytest = "*"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
line_length = 100
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = true

[tool.pylint.typecheck]
generated-members = ["cv2.*", "numpy.*"]
